--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,6 +7,26 @@
         android:layout_height="match_parent"
         tools:context=".GLFragment">
 
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="end">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#000000"
+                android:layout_gravity="end"
+                android:text="fps:"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#000000"
+                android:layout_gravity="end"
+                android:text="0.0"
+                android:id="@+id/fps"/>
+    </LinearLayout>
+
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="400dp"
                     android:id="@+id/gl_root"
