--- a/L2d_App/app/src/main/res/layout/activity_main.xml
+++ b/L2d_App/app/src/main/res/layout/activity_main.xml
@@ -6,32 +6,31 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="end">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#000000"
+                android:layout_gravity="end"
+                android:text="fps:"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#000000"
+                android:layout_gravity="end"
+                android:text="0.0"
+                android:id="@+id/fps"/>
+    </LinearLayout>
 
-    <ImageView android:layout_width="match_parent"
-               android:layout_height="200dp"
-               android:id="@+id/image"/>
+    <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:id="@+id/gl_root"
+                    android:layout_gravity="center">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            android:background="?android:attr/windowBackground"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/bottom_nav_menu"/>
-
-    <fragment
-            android:id="@+id/nav_host_fragment_activity_main"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:layout_constraintBottom_toTopOf="@id/nav_view"
-            android:layout_marginBottom="?attr/actionBarSize"
-            app:navGraph="@navigation/mobile_navigation"/>
-
+    </RelativeLayout>
 
 </RelativeLayout>
